--- a/TvShowSite.API/TvShowSite.API.csproj
+++ b/TvShowSite.API/TvShowSite.API.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="5.4.1" />
+    <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="5.4.0" />
+    <PackageReference Include="SimpleInjector.Packaging" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TvShowSite.Domain\TvShowSite.Domain.csproj" />
+    <ProjectReference Include="..\TvShowSite.Service\TvShowSite.Service.csproj" />
   </ItemGroup>
 
 </Project>
