--- a/TvShowSite.Domain/TvShowSite.Domain.csproj
+++ b/TvShowSite.Domain/TvShowSite.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="5.4.1" />
+    <PackageReference Include="SimpleInjector.Packaging" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
