feat: First connection to db is initialized.

--- a/TvShowSite.API/appsettings.json
+++ b/TvShowSite.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL" : ""
+    "SiteDbConnectionString": "Server=127.0.0.1; Database=tvshow; User Id=postgres; Password=ilker8420;"
   }
 }
