--- a/TvShowSite.Core/TvShowSite.Core.csproj
+++ b/TvShowSite.Core/TvShowSite.Core.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>e5afef6f-11c3-47b0-81b6-d3416058059c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
