--- a/TvShowSite.API/TvShowSite.API.csproj
+++ b/TvShowSite.API/TvShowSite.API.csproj
@@ -4,16 +4,21 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e4891c22-1a16-4e53-8000-98ae87816105</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.9" />
     <PackageReference Include="SimpleInjector" Version="5.4.1" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="5.4.0" />
+    <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc.Core" Version="5.4.0" />
     <PackageReference Include="SimpleInjector.Packaging" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TvShowSite.Core\TvShowSite.Core.csproj" />
+    <ProjectReference Include="..\TvShowSite.Data\TvShowSite.Data.csproj" />
     <ProjectReference Include="..\TvShowSite.Domain\TvShowSite.Domain.csproj" />
     <ProjectReference Include="..\TvShowSite.Service\TvShowSite.Service.csproj" />
   </ItemGroup>
