--- a/TvShowSite.Data/TvShowSite.Data.csproj
+++ b/TvShowSite.Data/TvShowSite.Data.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
+    <PackageReference Include="Npgsql" Version="7.0.2" />
     <PackageReference Include="SimpleInjector" Version="5.4.1" />
     <PackageReference Include="SimpleInjector.Packaging" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
