feat: JWT authentication and refresh token mechanism are added.

--- a/TvShowSite.API/appsettings.json
+++ b/TvShowSite.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "AccessTokenLifetimeInMinutes": 1,
+    "RefreshTokenLifetimeInMinutes": 1000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
