feat: Profile page is mostly completed.

--- a/TvShowSite.API/TvShowSite.API.csproj
+++ b/TvShowSite.API/TvShowSite.API.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\TvShowSite.Service\TvShowSite.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\pictures\" />
+  </ItemGroup>
+
 </Project>
