--- a/TvShowSite.API/appsettings.json
+++ b/TvShowSite.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "AppSettings": {
     "AccessTokenLifetimeInMinutes": 100000,
-    "RefreshTokenLifetimeInMinutes": 999999
+    "RefreshTokenLifetimeInMinutes": 999999,
+    "ApiUrl": "https://localhost:7148"
   },
   "Logging": {
     "LogLevel": {
